# AAF-v2

./: .gitignore  README.md  pyproject.toml
data/: asset-manifest.json
data/layouts/: icon-elements.damage-mana.json  icon-elements.json  icon-elements.mana.json  icon-elements.multi-damage-mana.json
docs/: architecture.md  icon-completeness-plan.md  open-layout-editors.md
fixtures/: example.damage-mana.json
src/aaf_v2/: __init__.py  api.py  assets.py  cli.py  layout.py  models.py  renderer.py  validation.py
tests/: test_api.py
tools/: v2_damage_mana_layout_editor.html  v2_frame_element_editor.css  v2_frame_element_editor.js  v2_icon_elements_layout_editor.html  v2_mana_layout_editor.html  v2_multi_damage_mana_layout_editor.html
