[project]
name = "aaf-v2"
version = "0.1.0"
description = "API-first Active Abilities Frame renderer for HuloreMewgenics V2"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
aaf-v2 = "aaf_v2.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
